[1.2.0] Inventory, Trade & NPC Integration Update (#2)
* Refactored storage to Milekat utils
* Centralized InventoryShop handling
* Improved trade compute & limits logic
* Added default trade mode support
* Enhanced NPC shop integration
* Optimized TradeUtils (slots, size)
* Cleaned deps & auto format applied
* Implemented paginated shop listing